# MF_real_latest

./: .env.example  .gitignore  .render-redeploy  .renderignore  .replit  AD_COMPARISON_REVENUE_BEHAVIOR.md  AGENTS.md  ARCHITECTURE_USER_JOURNEY.md  AUTO_CONVERSION_VALUE_FEATURE.md  CAMPAIGN_CONVERSION_VALUE_FIELD_BEHAVIOR.md  CAMPAIGN_DEEPDIVE_BUDGET_FINANCIAL_ANALYSIS_PRODUCTION_READY.md  CAMPAIGN_DEEPDIVE_CUSTOM_REPORT_PRODUCTION_READY.md  CAMPAIGN_DEEPDIVE_EXECUTIVE_SUMMARY_PRODUCTION_READY.md  CAMPAIGN_DEEPDIVE_PERFORMANCE_SUMMARY_PRODUCTION_READY.md  CAMPAIGN_DEEPDIVE_PLATFORM_COMPARISON_PRODUCTION_READY.md  CAMPAIGN_DEEPDIVE_PRODUCTION_READY_STATUS.md  CAMPAIGN_DEEPDIVE_TREND_ANALYSIS_PRODUCTION_READY.md  CAMPAIGN_LEVEL_KPI_BENCHMARK_PRODUCTION_READY.md  CAMPAIGN_NAME_MATCHING_TESTING.md  CAMPAIGN_NAME_MATCHING_UX.md  CLAUDE.md  CLIENT_SETUP_WILLIAM_REED.md  COMPREHENSIVE_DATASET_STANDARDIZATION.md  CONNECTED_PLATFORM_SECTION_TEMPLATES.md  CONVERSIONS_DATA_SOURCES_EXPLAINED.md  CONVERSIONS_MATCHING_EXPLAINED.md  CONVERSION_VALUE_DATA_SOURCES.md  CONVERSION_VALUE_EXPLAINED.md  CONVERSION_VALUE_FIELD_LOGIC.md  CONVERSION_VALUE_INGESTION.md  CONVERSION_VALUE_MAPPING_USER_JOURNEY.md  CONVERSION_VALUE_MULTI_PLATFORM_EXPLANATION.md  CONVERSION_VALUE_UI_ENHANCEMENTS.md  CONVERSION_VALUE_WEBHOOK_CONNECTION.md  CURRENT_VS_DYNAMIC_STANDARDIZATION.md  CUSTOM_INTEGRATION_CONNECTED_PLATFORM_PRODUCTION_READY.md  DATASET_HANDLING_COMPARISON.md  DATASET_STANDARDIZATION_STRATEGY.md  DATA_SOURCE_RELATIONSHIP.md  DEVELOPER_NOTES_WILLIAM_REED.md  (+117 more)
.claude/: settings.local.json
(+434 files in other folders)
